fix: jumpy sidebar on submit

--- a/client/src/delegate-side/components/dashboard/Dashboard.scoped.css
+++ b/client/src/delegate-side/components/dashboard/Dashboard.scoped.css
@@ -10,6 +10,9 @@
   background-color: #f7f7f7;
   overflow: auto;
 }
+.dashboard-container::-webkit-scrollbar {
+  display: none;
+}
 
 .content-container {
   display: flex;
@@ -98,9 +101,6 @@
 .submission-confirmation {
   height: 100%;
   width: 100%;
-
-  position: absolute;
-  z-index: 10;
 
   display: flex;
   flex-direction: column;
